--- a/lab-02-sad-plot.html
+++ b/lab-02-sad-plot.html
@@ -375,20 +375,16 @@ Luca</h4>
 <div id="exercise-1" class="section level3">
 <h3>Exercise 1</h3>
 <p>The data will have 11 rows, one for each year.</p>
-<p>Team member 1 should knit, stage &amp; commit, and push all changes
-to GitHub.</p>
 <hr />
 <p>Team member 2 should pull to download updates and begins here.</p>
 </div>
 <div id="exercise-2" class="section level3">
 <h3>Exercise 2</h3>
-<pre class="r"><code># uncomment and edit the code below
-#staff_long &lt;- ___ %&gt;%
-#  ___(
-#    cols = ___, 
-#    names_to = &quot;___&quot;,
-#    values_to = &quot;___&quot;
-#    )</code></pre>
+<pre class="r"><code>staff_long &lt;- staff %&gt;%
+  pivot_longer(
+    cols = &quot;faculty_type&quot;, 
+    names_to = &quot;faculty&quot;,
+    values_to = &quot;year&quot;)</code></pre>
 </div>
 <div id="exercise-3" class="section level3">
 <h3>Exercise 3</h3>
